Checked bootstrap and view recipe details.