@@ -1,4 +1,3 @@
-
 package guru.springframework.controllers;
 
 import guru.springframework.services.RecipeService;
@@ -22,7 +21,7 @@ public class RecipeController {
     @RequestMapping("/recipe/show/{id}")
     public String showById(@PathVariable String id, Model model){
 
-        model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
+        model.addAttribute("recipe", recipeService.findById(new Long(id)));
 
         return "recipe/show";
     }
